--- a/config.json
+++ b/config.json
@@ -94,6 +94,7 @@
     "@input-height-base": "(@line-height-computed + (@padding-base-vertical * 2) + 2)",
     "@input-height-large": "(ceil(@font-size-large * @line-height-large) + (@padding-large-vertical * 2) + 2)",
     "@input-height-small": "(floor(@font-size-small * @line-height-small) + (@padding-small-vertical * 2) + 2)",
+    "@form-group-margin-bottom": "15px",
     "@legend-color": "@gray-dark",
     "@legend-border-color": "#e5e5e5",
     "@input-group-addon-bg": "@gray-lighter",
@@ -378,21 +379,16 @@
   "css": [
     "type.less",
     "grid.less",
-    "modals.less"
+    "responsive-utilities.less",
+    "navs.less",
+    "dropdowns.less",
+    "modals.less",
+    "carousel.less"
   ],
   "js": [
-    "alert.js",
-    "button.js",
     "carousel.js",
     "dropdown.js",
-    "modal.js",
-    "tooltip.js",
-    "popover.js",
-    "tab.js",
-    "affix.js",
-    "collapse.js",
-    "scrollspy.js",
     "transition.js"
   ],
-  "customizerUrl": "http://getbootstrap.com/customize/?id=ad91b79d361f383b5269"
+  "customizerUrl": "http://getbootstrap.com/customize/?id=f6e98ec696326602e3ae"
 }
